# tokenmanager

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Pipfile  docker-compose.yml  local_settings.py.example  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django-ci.yml  docker-publish.yml
groupadmin/: views.py
nfctokens/: models.py  views.py
nfctokens/management/commands/: nfctokens_expire.py
nfctokens/migrations/: 0010_alter_nfctoken_uid.py
tokenmanager/: admin.py  asgi.py  settings_common.py  urls.py  wsgi.py
tokenmanager/templates/: base.html  home.html
