[project]
name = "tokenmanager"
version = "0.0.1"
requires-python = ">=3.10, <3.15"
dependencies = [
    "django==5.2.*",
    "django-allauth[mfa, socialaccount]",
    "django-bootstrap5",
    "django-extensions",
    "gunicorn",
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
